[package]
name = "zicsv"
description = "Parser library for Zapret-Info CSV lists"
version = "0.0.1"
authors = ["Ivan Mironov <mironov.ivan@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["zapret-info", "parser"]
categories = []
publish = false
repository = "https://github.com/im-0/zicsv"
documentation = "https://github.com/im-0/zicsv"

[features]
default = []
serialization = ["chrono/serde", "serde", "serde_derive", "url/serde", "url_serde"]
unstable = []

[dependencies]
chrono = { version = "*", default_features = false }
csv = { version = "*", default_features = false }
encoding = { version = "*", default_features = false }
failure = { version = "*", default_features = false, features = ["std"] }
ipnet = { version = "*", default_features = false }
serde = { version = "*", default_features = false, optional = true }
serde_derive = { version = "*", default_features = false, optional = true }
url = { version = "*", default_features = false }
url_serde = { version = "*", default_features = false, optional = true }

[dev-dependencies]
pretty_assertions = { version = "*", default_features = false }
serde_json = { version = "*", default_features = false }
